# iris-flower-classification

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/: iris.csv.dvc
iris_flower_classification/: data.py  evaluate.py  plot.py  prepare.py  train.py
plots/: .gitignore
tests/: test_data.py  test_evaluate.py
